--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -8,16 +8,23 @@
 
     <!-- Search Widget -->
     <div class="col-md-12">
+        <div class="breadcrumb-wrapper"></div>
+            <ol class="breadcrumb">
+                <%= link_to 'Connechub' , root_path %>&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;<%= link_to @listing.category.name, category_path(@listing.category) %>&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;<%= link_to @listing.subcategory.name, category_subcategory_path(@listing.category, @listing.subcategory) %>
+            </ol>
+        </div>
       <!-- Product Info Start -->
       <div class="product-info row">
         <div class="col-lg-8 col-md-12 col-xs-12">
           <div class="ads-details-wrapper">
             <div class="product-img">
-                <% # TODO would like to use the rails_videosj GEM but getting VideoJS 7+ is a PITA %>
+                <% # source https://stackoverflow.com/questions/18169473/video-js-size-to-fit-div %>
+                <% # source https://stackoverflow.com/questions/20051332/videojs-centered-play-button %>
+                <% # source https://stackoverflow.com/questions/5879209/how-to-center-html5-videos %>
                 <video
-                    class="video-js vjs-default-skin"
+                    class="center video-js vjs-default-skin vjs-big-play-centered"
                     controls=controls
-                    data-setup="{}"
+                    data-setup='{}'
                     height="450"
                     poster="https://<%= ENV['AWS_S3_MEDIA_DISPLAY_BUCKET'] %>.s3<%= (ENV['REGION'] == 'us-east-1' ? "" : "-" + ENV['REGION']) %>.amazonaws.com/<%= URI::encode(@listing.media_file_name) %>-2m-00001.png"
                     preload=preload
@@ -37,7 +44,7 @@
             <div class="ads-details-info">
               <h2><%= @listing.title %></h2>
               <div class="details-meta">
-                <span><i class="lni-alarm-clock"></i> <%= @listing.created_at %></span>
+                <span><i class="lni-alarm-clock"></i> <%= @listing.created_at.strftime("%B %e, %Y") %></span>
                 <span><i class="lni-map-marker"></i> <%= @listing.city %>, <%= @listing.state %> <%= @listing.zipcode %></span>
                 <span><i class="lni-eye"></i> <%= Listing.listing_views(@listing.id) %> View</span>
                 <span>
@@ -111,23 +118,25 @@
                   </div>
                   <div class="agent-details">
                     <h3><a href="viewads.html"><%= @listing.user.username %></a></h3>
-                    <span><i class="lni lni-envelope"></i> <%= @listing.user.email %></span>
                   </div>
                 </div>
                 <div class="mb-4">
-                  <object style="border:0; height: 230px; width: 100%;"
-                    data="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d34015.943594576835!2d-106.43242624069771!3d31.677719472407432!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86e75d90e99d597b%3A0x6cd3eb9a9fcd23f1!2sCourtyard+by+Marriott+Ciudad+Juarez!5e0!3m2!1sen!2sbd!4v1533791187584"></object>
+                  <object
+                    style="border:0; height: 230px; width: 100%;"
+                    data="https://maps.google.com/maps?q=<%= @listing.latitude %>,<%= @listing.longitude %>&hl=en&z=11&output=embed">
+                  </object>
                 </div>
+                <% if @user.present? %>
+                
                 <div style="text-align:center;"><a class="btn btn-success btn-sm"
-                    href="mailto:davis.ron@hotmail.com?body=Reach%20out%20to%20message%20the%20seller%20about%20their%20ad.&amp;subject=test%20ad">Message
-                    the Seller</a> </div>
+                    href="mailto:davis.ron@hotmail.com?body=Reach%20out%20to%20message%20the%20seller%20about%20their%20ad.&amp;subject=test%20ad">Email to seller</a> </div>
                 <br>
-
                 <hr>
                 <div class="comments">
                   <h4 class="widget-title"> <i class="lni lni-comments-alt"></i> Post a Comment </h4>
                     <%= render :partial=> 'comments/comment' %>
                 </div>
+                <% end %>
               </div>
             </div>
 
