--- a/app/views/categories/_show.erb
+++ b/app/views/categories/_show.erb
@@ -1,28 +1,27 @@
-<!-- Main container Start -->  
-<div class="main-container section-padding">
-  <div class="container">
-    <div class="row">
-
-    <%= render :partial => 'partials/side_menu' %>
-
-      <div class="col-lg-9 col-md-12 col-xs-12 page-content">
-      
-        <div class="col-md-12">
-
-          <%= render :partial => 'partials/breadcrumb', locals: {
-            category: @category,
-            subcategory: @subcategory,
-          } %>
-
-          <%= render :partial => 'partials/showing_counter' %>
-
-          <%= render :partial => 'listings/partials/item' %>
-
-          <%= render :partial => 'partials/pagination' %>
-
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="col-xs-6 col-sm-4 col-md-3 side-menu">
+  <%= render :partial => 'categories/search' %>
+  <%= render :partial => 'partials/side_menu', locals: {
+    categories: @categories,
+    subcategory: @subcategory,
+  } %>
 </div>
-<!-- Main container End -->  
+
+<div class="col-xs-6 col-sm-8 col-md-9">
+  <%= @category ? link_to('Connechub', root_path) + ' > ' + link_to(@category.name, @category) : '' %>
+  <%= @subcategory ? ' > ' + @subcategory.name : '' %>
+  <%= @category || @subcategory ? '<hr />'.html_safe : '' %>
+</div>
+
+<div class="col-xs-6 col-sm-8 col-md-9">
+  <div class="grid">
+    <% if @listings.present? %>  
+      <% @listings.each do |listing| %>
+        <%= render :partial => 'partials/item_card', locals: {
+          listing: listing
+        } %>
+      <% end%>
+    <% else %>
+      <p>No listings found!</>
+    <% end %>
+  </div>
+<br>
