ADDED root path now pointed to layouts#index. Separating the landing page from categories#index. About 50% way done with Categories#show VW iteration.

--- a/app/views/partials/_breadcrumb.erb
+++ b/app/views/partials/_breadcrumb.erb
@@ -1,5 +1,6 @@
 <!-- Breadcrumb Start -->
-<div class="breadcrumb-wrapper"></div>
+<div class="col-md-12">
+    <div class="breadcrumb-wrapper"></div>
     <ol class="breadcrumb">
     <li><a href="/">Home</a></li>
     <% if (@category) %>
