--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,8 +1,36 @@
-<div>
-  <%= render :partial => 'categories/show', locals: {
-    categories: @categories,
-    category: @category,
-    listings: @listings,
-    subcategory: @subcategory,
-  } %>
+<%= render :partial => 'partials/header_search_bar', locals: {
+    title: 'Category'
+} %>
+
+<!-- Start Content -->
+<div id="content" class="section-padding">
+  <div class="container">
+
+     <div class="row">
+        <%= render :partial=> 'partials/side_menu', locals: {
+            categories: @categories
+        } %>
+
+      <div class="col-lg-9 col-md-12 col-xs-12 page-content">
+
+        <%= render :partial=> 'partials/breadcrumb', locals: {
+            category: @category
+        } %>
+
+        <%= render :partial=> 'partials/listing_counter', locals: {
+            category: @category
+        } %>
+
+        <%= render :partial=> 'listings/partials/item_card', locals: {
+          listings: @listings
+        } %>
+
+        <%= render :partial=> 'partials/pagination', locals: {
+          listings: @listings
+        } %>
+
+      </div>
+    </div>
+  </div>
 </div>
+<!-- Main container End -->  
