--- a/app/views/listings/partials/_item_card.erb
+++ b/app/views/listings/partials/_item_card.erb
@@ -1,20 +1,38 @@
-<div class="panel panel-default grid-item">
-    <div class="panel-body">
-    <%= link_to image_tag(
-        "https://" + ENV['AWS_S3_MEDIA_DISPLAY_BUCKET'] + ".s3" + (ENV['REGION'] != 'us-east-1' ? '-' + ENV['REGION'] : '') + ".amazonaws.com/" + listing.media_file_name + "-1m-00001.png",
-        class: "img-responsive",
-        onerror: "this.onerror=null;this.src='/assets/image_coming_soon.jpg';"
-    ), listing %>
-    </div>
-    <div class="panel-footer pin-content">
-        <div class="price"><b>$<%= listing.price %></b></div>
-        <div class="name"><b><%= link_to listing.title, listing %></b></div>
-        <div class="description"><%= listing.city %>, <%= listing.state %></div>
-        <small class="board-name"><%= listing.created_at.strftime('%B %d, %Y') %></small>
-        <hr>
-        <div>
-            <%= image_tag listing.user.avatar.url(:thumb), class: 'pin-avatar'%>
-            <b><%= link_to listing.user.username, user_path(listing.user.username) %></b>
+<% @listings.each do |listing| %>
+
+<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+    <div class="featured-box">
+        <figure>
+            <div class="homes-tag featured">
+                <%= link_to listing.title, listing %>
+            </div>
+            <div class="homes-tag rent"><i class="lni-heart"></i> 202</div>
+            <span class="price-save">$<%= listing.price %></span>
+            <%= link_to image_tag( "https://" + ENV['AWS_S3_MEDIA_DISPLAY_BUCKET'] + ".s3" + (ENV['REGION'] !='us-east-1' ? '-' + ENV['REGION'] : '' ) + ".amazonaws.com/" + listing.media_file_name + "-1m-00001.png" , class: "img-responsive" , onerror: "this.onerror=null;this.src='/assets/image_coming_soon.jpg';" ), listing %>
+        </figure>
+        <div class="content-wrapper">
+            <div class="feature-content">
+                <h4><a href="ads-details.html">
+                        <%= link_to listing.description, listing %>
+                    </a></h4>
+                <p class="listing-tagline">Club and shop for you</p>
+                <div class="meta-tag">
+                    <div class="user-name">
+                        <a href="viewads.html"><i class="lni-user"></i> Jone</a>
+                    </div>
+                    <div class="listing-category">
+                        <a href="#"><i class="lni-display"></i>Electronic </a>
+                    </div>
+                </div>
+            </div>
+            <div class="listing-bottom clearfix">
+                <a href="#" class="float-left"><i class="lni-map-marker"></i> New York, US</a>
+                <a href="ads-details.html" class="float-right">View Details</a>
+            </div>
         </div>
     </div>
 </div>
+
+<% end %>
+
+
