--- a/app/views/partials/_pagination.erb
+++ b/app/views/partials/_pagination.erb
@@ -1,4 +1,4 @@
-<!-- Start Pagination -->
+<!-- Start Pagination --
 <div class="pagination-bar">
     <nav>
     <ul class="pagination justify-content-center">
@@ -9,4 +9,4 @@
     </ul>
     </nav>
 </div>
-<!-- End Pagination -->
+-- End Pagination -->
