--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -21,9 +21,31 @@
             category: @category
         } %>
 
-        <%= render :partial=> 'listings/partials/item_card', locals: {
-          listings: @listings
-        } %>
+        <!-- Adds wrapper Start -->
+        <div class="adds-wrapper">
+          <div class="tab-content">
+            <div id="grid-view" class="tab-pane fade active show">
+              <div class="row">
+                <% @listings.each do |listing| %>
+                  <%= render :partial=> 'categories/partials/item_card', locals: {
+                    listing: listing,
+                    size: '6'
+                  } %>
+                <% end %>
+            </div>
+          </div>
+          <div id="list-view" class="tab-pane fade">
+            <div class="row">
+                <% @listings.each do |listing| %>
+                  <%= render :partial=> 'categories/partials/item_card', locals: {
+                    listing: listing,
+                    size: '12'
+                  } %>
+                <% end %>
+            </div>
+          </div>
+        </div>
+        <!-- Adds wrapper End -->
 
         <%= render :partial=> 'partials/pagination', locals: {
           listings: @listings
