--- a/app/views/users/partials/_side_menu.html.erb
+++ b/app/views/users/partials/_side_menu.html.erb
@@ -4,9 +4,13 @@
             <div class="user">
             <% if current_user.avatar_file_name? %>
                 <figure>
-                    <a href="#">
-                        <img src="/system/users/avatars/000/000/001/thumb/<%= current_user.avatar_file_name %>" alt="<%= current_user.username %>">
-                    </a>
+                    <%= image_tag(
+                        "https://" + ENV['AWS_S3_MEDIA_DISPLAY_BUCKET'] + ".s3" + (ENV['REGION'] != 'us-east-1' ? '-' \
+                        + ENV['REGION'] : '') + ".amazonaws.com/" + current_user.avatar_file_name + "-1m-00001.png",
+                        alt: current_user.username,
+                        class: "img-fluid",
+                        onerror: "this.onerror=null;this.src='/assets/no-photo-available.png';"
+                    ) %>
                 </figure>
             <% end %>
                 <div class="usercontent">
