FIXED fee notification in listing step 1

--- a/app/views/listings/partials/_form.erb
+++ b/app/views/listings/partials/_form.erb
@@ -35,10 +35,11 @@
     </div>
     <div id="sub_category_cost_container" style="display: none">
         <div class="input-group">
-            <div class="input-group-addon" style="color: red">Fee required</div>
-            <div class="form-control fee_amount_message">
-                Selected category requires a payment of <span id="fee_amount" style="font-weight: bolder"></span> on the next step.
-                However, you have 26 promotional paid postings remaining. One will be used and no payment will be necessary.
+            <div class="input-group-addon" style="color: red"><h5>Fee required</h5>
+                <div>
+                    Selected category requires a payment of <span id="fee_amount" style="font-weight: bolder"></span> on the next step.
+                    However, you have 26 promotional paid postings remaining. One will be used and no payment will be necessary.
+                </div>
             </div>
         </div>
     </div>
