Listing payment VW now functional w/ new layout. FIXED style of payment notifce on Listing New VW.

--- a/app/views/listings/partials/_form.erb
+++ b/app/views/listings/partials/_form.erb
@@ -37,8 +37,10 @@
         <div class="input-group">
             <div class="input-group-addon" style="color: red"><h5>Fee required</h5>
                 <div>
-                    Selected category requires a payment of <span id="fee_amount" style="font-weight: bolder"></span> on the next step.
-                    However, you have 26 promotional paid postings remaining. One will be used and no payment will be necessary.
+                    Selected category requires a payment of <span id="fee_amount" style="font-weight: bolder"></span> on the next step.<br />
+                    <% if current_user.promo_1 > 0 %>
+                    However, you have <%= current_user.promo_1 %> promotional paid postings remaining. One will be used and no payment will be necessary.
+                    <% end %>
                 </div>
             </div>
         </div>
