--- a/app/views/listings/payment.html.erb
+++ b/app/views/listings/payment.html.erb
@@ -1,55 +1,70 @@
-<div class="col-md-8 col-md-offset-2">
-    <div class="row">
-        <div class="panel panel-default">
+<%= render :partial => 'partials/header_page_title', locals: {
+    title: 'Listing - Payment'
+} %>
 
-            <div class="panel-heading">
-                <h2>Pay for Your New Listing</h2>
-            </div>
+<!-- Start Content -->
+<div id="content" class="section-padding">
+    <div class="container">
+        <div class="row">
+            <%= render :partial=> 'users/partials/side_menu', locals: {
+                current_user: current_user
+            } %>
+            <div class="col-sm-12 col-md-8 col-lg-9">
+                <div class="page-content">
+                    <div class="inner-box">
+                        <div class="tg-contactdetail">
+                            <div class="dashboard-box">
+                                <h2 class="dashbord-title">Submit Payment before Media Upload</h2>
+                            </div>
+                            <div class="dashboard-wrapper">
 
-            <div class="panel-body">
+                                <%= form_for(@listing,
+                                    :url => url_for(:action => 'create_payment', :controller => 'listings'),
+                                    :method => 'post',
+                                    html: {
+                                        authenticity_token: true,
+                                        class: 'form-horizontal',
+                                        id: 'payment-form',
+                                        multipart: true,
+                                    }
+                                ) do |f|%>
 
-                <%= form_for(@listing,
-                    :url => url_for(:action => 'create_payment', :controller => 'listings'),
-                    :method => 'post',
-                    html: {
-                        authenticity_token: true,
-                        class: 'form-horizontal',
-                        id: 'payment-form',
-                        multipart: true,
-                    }
-                ) do |f|%>
+                                    <div>
 
-                    <div class="form-row">
+                                        <div class="input-group">
+                                            <div class="input-group-addon">Amount to be charged</div>
+                                            <div class="form-control">
+                                                $<%= @listing.charge_amount.to_s.insert(-3, '.') %> USD
+                                            </div>
+                                        </div>
+                                        <br>
 
-                        <div class="input-group">
-                            <div class="input-group-addon">Amount to be charged</div>
-                            <div class="form-control">
-                                $<%= @listing.charge_amount.to_s.insert(-3, '.') %> USD
+                                        <div id="card-element">
+                                        <!-- A Stripe Element will be inserted here. -->
+                                        </div>
+
+                                        <!-- Used to display form errors. -->
+                                        <div id="card-errors" role="alert"></div>
+                                    </div>
+                                    <br>
+
+                                    <div class="input-group">
+                                        <div class="actions">
+                                            <%= f.submit "Submit Payment", class: "btn btn-success", id: "listings_submit" %>
+                                        </div>
+                                    </div>
+
+                                <% end %>
+
                             </div>
                         </div>
-                        <br>
-
-                        <div id="card-element">
-                        <!-- A Stripe Element will be inserted here. -->
-                        </div>
-
-                        <!-- Used to display form errors. -->
-                        <div id="card-errors" role="alert"></div>
                     </div>
-                    <br>
-
-                    <div class="input-group">
-                        <div class="actions">
-                            <%= f.submit "Submit Payment", class: "btn btn-success", id: "listings_submit" %>
-                        </div>
-                    </div>
-
-                <% end %>
-
+                </div>
             </div>
         </div>
     </div>
 </div>
+<!-- End Content -->
 
 <%= render :partial => 'partials/processing_overlay' %>
 
@@ -62,8 +77,7 @@
     // Create an instance of Elements.
     var elements = stripe.elements();
 
-    // Custom styling can be passed to options when creating an Element.
-    // (Note that this demo uses a wider set of styles than the guide below.)
+    // Style the Stripe elements
     var style = {
         base: {
             color: '#32325d',
