--- a/app/views/partials/_hero_search_bar.erb
+++ b/app/views/partials/_hero_search_bar.erb
@@ -1,6 +1,6 @@
 <div class="search-bar">
     <div class="search-inner">
-        <%= form_tag categories_search_path, class: "search-form", method: :get do |f| %>
+        <%= form_tag search_show_path, class: "search-form", method: :get do |f| %>
             <div class="form-group">
                 <%= text_field_tag :search, nil, placeholder: 'What are you looking for?', class: "form-control"%>
             </div>
