--- a/app/views/search/show.html.erb
+++ b/app/views/search/show.html.erb
@@ -1,5 +1,5 @@
 <%= render :partial => 'partials/header_search_bar', locals: {
-    title: 'Category Search'
+    title: 'Search Results'
 } %>
 
 <!-- Start Content -->
@@ -13,15 +13,13 @@
 
       <div class="col-lg-9 col-md-12 col-xs-12 page-content">
 
-        <!-- no breadcrumbs on search results -->
-
         <!-- Adds wrapper Start -->
         <div class="adds-wrapper">
           <div class="tab-content">
             <div id="grid-view" class="tab-pane fade active show">
               <div class="row">
                 <% @listings.each do |listing| %>
-                  <%= render :partial=> 'categories/partials/item_card', locals: {
+                  <%= render :partial=> 'listings/partials/item_card', locals: {
                     listing: listing,
                     size: '6'
                   } %>
@@ -31,7 +29,7 @@
           <div id="list-view" class="tab-pane fade">
             <div class="row">
                 <% @listings.each do |listing| %>
-                  <%= render :partial=> 'categories/partials/item_card', locals: {
+                  <%= render :partial=> 'listings/partials/item_card', locals: {
                     listing: listing,
                     size: '12'
                   } %>
